# DS_SLAM

./: .gitignore  CMakeLists.txt  README.md  run.sh
Core/Common/: frame.cpp  frame.hpp  hessian_blocks.cpp  hessian_blocks.hpp  immature_point.cpp  immature_point.hpp  pixel_selector.cpp  pixel_selector.h  pixel_selector.hpp  point.cpp  point.hpp  residual_projections.h  residuals.cpp  residuals.hpp
Core/FullSystem/: full_system.cpp  full_system.hpp  full_system_debug_stuff.cpp  full_system_marginalize.cpp  full_system_optimize.cpp  full_system_optimize_point.cpp
Core/Initializer/: coarse_initializer.cpp  coarse_initializer.hpp
Core/LoopClosing/: brief_extractor.cpp  brief_extractor.hpp  keyframe.cpp  keyframe.hpp  orb_extractor.cpp  orb_extractor.hpp  pose_graph.cpp  pose_graph.hpp
Core/Optimization/: accumulated_SC_hessian.cpp  accumulated_SC_hessian.hpp  accumulated_top_hessian.cpp  accumulated_top_hessian.hpp  energy_function.cpp  energy_function.hpp  energy_function_structs.cpp  energy_function_structs.hpp  matrix_accumulators.hpp  raw_residual_jacobian.hpp
Core/Tracker/: coarse_tracker.cpp  coarse_tracker.hpp
Core/Utils/: dataset_reader.h  global_calib.cpp  global_calib.h  global_funcs.h  image_and_exposure.hpp  index_thread_reduce.hpp  minimal_image.hpp  misc.h  nano_flann.hpp  num_type.h  settings.cpp  settings.h  tic_toc.h  undistort.cpp  undistort.hpp  utility.cpp  utility.hpp
Core/Visualizer/: image_RW.h  image_RW_OpenCV.cpp  image_RW_dummy.cpp  image_display.h  image_display_OpenCV.cpp  image_display_dummy.cpp  visualizer_3D.hpp  visualizer_sample.hpp
Core/Visualizer/Pangolin/: keyframe_display.cpp  keyframe_display.hpp  visualizer_pangolin.cpp  visualizer_pangolin.hpp
Examples/: main_dataset.cpp
